remove tests message

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ webroot/js/jquery.min.js
 webroot/js/bootstrap.min.js
 webroot/css/bootstrap.min.css
 webroot/css/bootstrap-theme.min.css
+/config/Migrations/schema-dump-default.lock
