--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ php:
 before_script:
   - sh -c "composer require 'cakephp/cakephp-codesniffer:dev-master'"
   - phpenv rehash
+  - composer install --prefer-dist --no-interaction
 
 script:
   - sh -c "vendor/bin/phpcs -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests ./config ./webroot"
