--- a/.travis.yml
+++ b/.travis.yml
@@ -6,24 +6,25 @@ php:
   - 7.0
   - 5.5
   - 5.6
+  - 7.1
   
 dist: trusty
 
 env:
   matrix:
     - DB=mysql db_dsn='mysql://root@0.0.0.0/cakephp_test'
-    - DB=pgsql db_dsn='postgres://postgres@127.0.0.1/cakephp_test'
+#    - DB=pgsql db_dsn='postgres://postgres@127.0.0.1/cakephp_test'
     - DB=sqlite db_dsn='sqlite:///:memory:'
   global:
     - DEFAULT=1
 
 services:
   - memcached
-  - redis-server
-  - postgresql
+#  - redis-server
+#  - postgresql
 
-addons:
-  postgresql: "9.4"
+#addons:
+#  postgresql: "9.4"
 
 cache:
   directories:
