edit frontend style

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "friendsofcake/CakePdf": "^3.2",
         "dompdf/dompdf": "^0.7.0",
         "friendsofcake/search": "^2.1",
-        "codekanzlei/cake-frontend-bridge": "^1.0"
+        "codekanzlei/cake-frontend-bridge": "^1.0",
+        "oyejorge/less.php": "v1.7.0.10"
     },
     "require-dev": {
         "psy/psysh": "@stable",
